--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-INFER_API_URL=
-PAPAGO_API_URL=
-PAPAGO_VERSION=
+# NOTE: 번역 소스 언어 설정(en / ch)
+SOURCE=en
+INFER_API_URL=https://buzhidao.ml
+PAPAGO_API_URL=https://papago.naver.com/apis/n2mt/translate
+PAPAGO_VERSION=v1.6.9_0f9c783dcc
+# NOTE: 텔레그램 botfather을 통해 bot 생성 후 해당 토큰 설정
 BOT_TOKEN=
+# NOTE: CHAT_ID를 비워둔 채로 bot에 아무 말이나 걸면 chat_id를 알려줌, 설정 후 재실행 필요
 CHAT_ID=
+X_DELTA=25
+# NOTE: 줄 바꿈이 있는 문단이 여러 줄로 나눠져 번역된다면 Y_DELTA로 줄사이 간격 조정 필요
+Y_DELTA=225
