--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 SOURCE=en
 INFER_API_URL=https://buzhidao.ml
 PAPAGO_API_URL=https://papago.naver.com/apis/n2mt/translate
-PAPAGO_VERSION=v1.6.9_0f9c783dcc
+# NOTE: https://papago.naver.com/main...의 소스에서 PPG 검색 후 해당 라인에 버전 확인
+PAPAGO_VERSION=v1.7.7_5cf6891a07
 # NOTE: 텔레그램 botfather을 통해 bot 생성 후 해당 토큰 설정
 BOT_TOKEN=
 # NOTE: CHAT_ID를 비워둔 채로 bot에 아무 말이나 걸면 chat_id를 알려줌, 설정 후 재실행 필요
