paddle 업데이트, papago version 실시간 수동 업데이트 지원, ocr 정확도를 높이기 위해 입력 이미지에 sharpen 적용

--- a/Dockerfile.infer
+++ b/Dockerfile.infer
@@ -1,15 +1,15 @@
-FROM python:3.9
+FROM python:3.12
 
 WORKDIR /app
 
 COPY main.py main.py
 COPY test.png test.png
-COPY paddlepaddle-0.0.0-cp39-cp39-linux_aarch64.whl paddlepaddle-0.0.0-cp39-cp39-linux_aarch64.whl
-COPY paddleocr-2.7.3-py3-none-any.whl paddleocr-2.7.3-py3-none-any.whl
+COPY paddlepaddle-0.0.0-cp312-cp312-linux_aarch64.whl paddlepaddle-0.0.0-cp312-cp312-linux_aarch64.whl
+COPY paddleocr-2.8.0-py3-none-any.whl paddleocr-2.8.0-py3-none-any.whl
 
 RUN apt update
 RUN apt install -y libgl1-mesa-glx libgeos-dev
-RUN pip install numpy==1.26.4 requests paddlepaddle-0.0.0-cp39-cp39-linux_aarch64.whl paddleocr-2.7.3-py3-none-any.whl fastapi uvicorn python-multipart
+RUN pip install numpy==1.26.4 requests paddlepaddle-0.0.0-cp312-cp312-linux_aarch64.whl paddleocr-2.8.0-py3-none-any.whl fastapi uvicorn python-multipart Pillow
 RUN paddleocr --image_dir ./test.png --use_angle_cls true --lang ch --use_gpu false
 RUN paddleocr --image_dir ./test.png --use_angle_cls true --lang en --use_gpu false
 
