--- a/Dockerfile.infer
+++ b/Dockerfile.infer
@@ -11,7 +11,7 @@ RUN apt update
 RUN apt install -y libgl1-mesa-glx libgeos-dev
 RUN pip install numpy==1.26.4 requests paddlepaddle-0.0.0-cp312-cp312-linux_aarch64.whl paddleocr-2.8.0-py3-none-any.whl fastapi uvicorn python-multipart Pillow
 RUN paddleocr --image_dir ./test.png --use_angle_cls true --lang ch --use_gpu false
-RUN paddleocr --image_dir ./test.png --use_angle_cls true --lang en --use_gpu false
+# RUN paddleocr --image_dir ./test.png --use_angle_cls true --lang en --use_gpu false
 
 EXPOSE 8000
 CMD uvicorn main:app --host 0.0.0.0
